# standard

./: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
models/: text_classifier.joblib  text_classifier5.joblib  text_classifier7.joblib
models/ner_model/: meta.json
models/ner_model/morphologizer/: model
models/ner_model/ner/: moves
src/: config.py
src/api/: main.py  router.py
src/api/routers/: achievements.py  completed_standards.py  credits.py  health.py  liabilities.py  liability_templates.py  standards.py  tokens.py  users.py
src/common/: db.py
src/common/events/: interfaces.py
src/common/handlers/: alchemy.py
src/common/models/: mixins.py
src/common/repository/: base.py
src/common/uow/: interfaces.py  uow.py
src/containers/: container.py  gateways.py  repositories.py  services.py  use_cases.py
src/data/: uow.py
src/data/models/: __init__.py  achievement.py  auth_link.py  completed_standard.py  credit.py  daily_stats.py  liability.py  liability_template.py  message.py  standard.py  user.py  user_achievement.py  user_record.py  user_streak.py
src/data/repositories/: achievements.py  auth_link.py  completed_standards.py  credits.py  daily_stats.py  liabilities.py  liability_templates.py  message.py  standards.py  user_records.py  users.py
src/domain/bot/: interfaces.py
src/worker/: app.py  commands.py  tasks.py  worker.py
tests/: conftest.py
tests/api/achievements/: test_list.py
tests/api/completed_standards/: test_create.py  test_delete.py  test_group.py  test_list.py  test_rating.py  (+2 more)
tests/factories/: achievements.py  completed_standards.py  daily_stats.py  liabilities.py  liability_templates.py  standards.py  user_achievement.py  user_achievement_progress.py  user_records.py  users.py
tests/fixtures/: completed_standards.py  daily_stats.py  liabilities.py  liability_templates.py  standards.py  user_achievement_progress.py  users.py
tests/utils/: db.py
(+122 files in other folders)
