[tool.poetry]
name = "standard"
version = "0.1.0"
description = ""
authors = ["dprokazin <d.prokazin@samolet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
dependency-injector = "^4.43.0"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
backoff = "^2.2.1"
typer = "^0.13.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.22"
sqlalchemy-filterset = "^2.3.0"
fastapi = "^0.115.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.34.0"
bcrypt = "4.0.1"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
