[tool.poetry]
name = "standard"
version = "0.1.0"
description = ""
authors = ["dprokazin <d.prokazin@samolet.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.6"
pydantic = "^2.9.2"
dependency-injector = "^4.43.0"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
backoff = "^2.2.1"
typer = "^0.13.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.22"
sqlalchemy-filterset = "^2.3.0"
fastapi = "^0.115.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.34.0"
bcrypt = "4.0.1"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
python-dateutil = "^2.9.0.post0"
pymorphy3 = "^2.0.4"
python-telegram-bot = "^22.1"
spacy = "^3.8.7"
joblib = "^1.5.1"
scikit-learn = "^1.7.0"
telegramify-markdown = "^0.5.1"
ollama = "^0.6.0"
aiocron = "^2.1"
rapidfuzz = "^3.14.3"
psycopg2 = "^2.9.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"
pytest-asyncio = "^1.3.0"
polyfactory = "^3.2.0"
pytest-xdist = "^3.8.0"
pyjwt = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
